deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accesscity-api
spec:
  selector:
    app: accesscity-api
  ports:
    - name: http
      port: 80
      targetPort: http
